# ipte

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Fractal/: AbstractShaderCompiler.h  BitmapGenerator.cpp  BitmapGenerator.hpp  FileWatcher.cpp  FileWatcher.hpp  Fractal.cpp  Fractal.hpp  GLSLCompiler.cpp  GLSLCompiler.h  HLSLCompiler.cpp  HLSLCompiler.h  Project.cpp  Project.hpp  SPIRVCompiler.cpp  SPIRVCompiler.h  ShaderEditor.cpp  ShaderEditor.hpp  ShaderModel.cpp  ShaderModel.hpp
assets/include/std/: basic.slang
assets/other/: cache.json
assets/shaders/: FRAG_shader.frag  FRAG_shader.frag.spv  FRAG_shader_int.frag  VERT_shader.vert  VERT_shader.vert.spv  VertShader.hlsl  def.hlsl  frag.hlsl  vert.spv
assets/templates/2D/: 2D Template.fract  Animation1.fract  Mandelbrot Template.fract  Noise.fract
assets/templates/3D/: MandelbrotTemplate.fract  MandelbrotTemplate4d.fract
core/: DEFINES.hpp  EngineBase.h  Event.hpp
extensions/ShadersRC/: ShadersRC.cpp
extensions/ShadersRC/SPIRV-Reflect/tests/: build_all_shaders.py
extensions/ShadersRC/dxc/: ShadersDXC.hpp
extensions/imgui/: CMakeLists.txt  imgui.hpp
include/VKBASE/platform-dependent/: AndroidSysRes.h
vkbase/: CMakeLists.txt
vkbase/CMake/: create_assets.cmake
vkbase/backends/SDL_backend/: CMakeLists.txt  SDL_backend.cpp  imgui_impl_sdl.cpp
vkbase/backends/SDL_backend/SDL/: CMakeLists.txt  configure
vkbase/backends/SDL_backend/SDL/.github/workflows/: generic.yml
vkbase/backends/SDL_backend/SDL/android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLSurface.java
vkbase/backends/SDL_backend/SDL/docs/: README-android.md
vkbase/backends/SDL_backend/SDL/src/dynapi/: SDL_dynapi.c
vkbase/backends/SDL_backend/SDL/src/main/windows/: version.rc
vkbase/backends/SDL_backend/SDL/src/video/: SDL_video.c
vkbase/backends/SDL_backend/SDL/src/video/os2/: SDL_os2dive.c
vkbase/backends/SDL_backend/SDL/test/win32/: sdlprocdump.c
vkbase/core/: CMakeLists.txt  EngineBase.cpp  EngineBase.h  EngineParams.cpp  EngineParams.hpp  Event.hpp  ParallelTaskManager.cpp  ParallelTaskManager.hpp  SystemBeckend.hpp  assets.cpp  messages.cpp
vkbase/extensions/: Image.cpp  Image.h  ParallelTaskManager.hpp
vkbase/extensions/Assets/: CMakeLists.txt  assets.cpp  assets.h
vkbase/extensions/Buffer/: Buffer.cpp  Buffer.hpp  CMakeLists.txt
vkbase/extensions/ShadersRC/: CMakeLists.txt  ShaderType.hpp  ShadersRC.cpp  ShadersRC.hpp
vkbase/extensions/ShadersRC/dxc/: CMakeLists.txt  ShadersDXC.cpp
vkbase/extensions/ShadersRC/shaderc/cmake/: setup_build.cmake
vkbase/extensions/ShadersRC/shaderc/glslc/src/: main.cc
vkbase/extensions/ShadersRC/slang/: CMakeLists.txt  ShaderCompilerSlang.cpp  ShaderCompilerSlang.hpp
vkbase/extensions/ShadersRC/slang/slang/: .gitignore
vkbase/extensions/ShadersRC/slang/slang/source/slangc/: main.cpp
vkbase/extensions/ShadersRC/slang/slang/tests/diagnostics/: generic-constraint-forward-reference.slang
vkbase/extensions/ShadersRC/slang/slang/tools/slang-unit-test/: unit-test-create-blob.cpp
vkbase/extensions/compute/: CMakeLists.txt  ComputeEng.cpp  ComputeEng.h
vkbase/extensions/cppruntime/: CMakeLists.txt  cppruntime.cpp  cppruntime.hpp  shared.c  test.cpp  test_func.c
vkbase/extensions/imgui/: CMakeLists.txt  Log.cpp  Log.hpp  imgui.cpp  imgui.hpp  imgui_backend.hpp
vkbase/extensions/imgui/ImGuiColorTextEdit/: TextEditor.cpp
vkbase/extensions/imgui/imgui/: imgui.h
vkbase/include/VKBASE/platform-dependent/: SysResGLFW.h  SysResSDL.h
